--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <title>About The Project</title>
         <link rel="stylesheet" href="https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0">
-        <link rel="stylesheet" href="poemstyle.css">
+        <link rel="stylesheet" href="crowelladrianna.github.io/poemstyle.css">
     </head>
     <body>
         <div class="container">
