more trying to get css to work

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>A Wrong A.I.</title>
         <link rel="stylesheet" href="https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0">
-        <link rel="stylesheet" href="mystyle.css">
+        <link rel="stylesheet" type="text/css" href="mystyle.css">
     </head>
     <body>
         <div class="container">
