--- a/redcomp.html
+++ b/redcomp.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Red Composition Book</title>
-        <link rel="stylesheet" href="https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0">
+        <style>@import url('https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0');</style>
         <link rel="stylesheet" type="text/css" href="poemstyle.css">
     </head>
     <body>
