--- a/redcomp.html
+++ b/redcomp.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="poemstyle.css">
     </head>
     <body>
+        <style>@import url("https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0");</style>
         <div class="container">
             <div class="header">
                 <h1><a href="index.html">A Wrong A.I.</a></h1> 
