--- a/redcomp.html
+++ b/redcomp.html
@@ -3,9 +3,9 @@
     <head>
         <title>Red Composition Book</title>
         <link rel="stylesheet" type="text/css" href="poemstyle.css">
+        <style>@import url(https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0);</style>
     </head>
     <body>
-        <style>@import url("https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0");</style>
         <div class="container">
             <div class="header">
                 <h1><a href="index.html">A Wrong A.I.</a></h1> 
