--- a/redcomp.html
+++ b/redcomp.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Red Composition Book</title>
+        <link rel="stylesheet" type = "font" href="https://themes.googleusercontent.com/fonts/css?kit=cGvuclDC_Z1vE_cnVEU6Ae_NZQ7StBcqH_vXVqoPMX0">
         <link rel="stylesheet" type="text/css" href="poemstyle.css">
     </head>
     <body>
