--- a/redcomp.html
+++ b/redcomp.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Red Composition Book</title>
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap');
-        </style>
+        <link rel="preconnect" href="//https://fonts.googleapis.com">
+        <link rel="preconnect" href="//https://fonts.gstatic.com" crossorigin>
+        <link href="//https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="poemstyle.css">
     </head>
     <body>
