Updated to include green fuzzy notebook

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     are toen got the ind the
                 </p>
                 <p><b>Poem</b></p>
-                <p>I love. l tear. I would, but so early somnis.<br>
+                <p>I love. I tear. I would, but so early somnis.<br>
                     Today is Tousdday, Jatu ray 2006. On Sanurday, I went to Manday,<br> 
                     I was betwixt, beneath, and the fare to Erin got behind
                 </p>
