--- a/redcomp.html
+++ b/redcomp.html
@@ -79,7 +79,7 @@
                     the past barren, I<br>
                 </p>
                 <p>
-                    I love. l tear. I would, but so early somnis.<br>
+                    I love. I tear. I would, but so early somnis.<br>
                     Today is Tousdday, Jatu ray 2006. On Sanurday, I went to Manday, <br>
                     I was betwixt, beneath, and the fare to Erin got behind<br>
                 </p>
