--- a/greenfuzz.html
+++ b/greenfuzz.html
@@ -14,128 +14,108 @@
             </div>
             <div class="poem">
                 <p class="title"><b>12/30/2010-07/02/2012</b></p>
-                <p>Dear Diary,<br>
-                    I’m meant to be and to go<br>
-                    on the out, the some here and to<br>
-                </p>
-                <p>
-                    feel like to eat and to eat and to go<br>
-                </p>
-                <p>
-                    Dear Diary,<br>
-                    Everything is mis sing here like it was because, <br>
-                    I wave to bat and you hold  <br>
-                    but sorry this is so me. I meant to swing <br>
-                    not leave <br>
-                </p>
-                <p>
-                    I feel like a donkey and tall,<br>
-                    so make me thorny. I’m so nice, LA to air today,<br>
-                    I’m going to sit<br>
-                </p>
-                <p>
-                    how much ale sat. I was hyperventilating in my essay<br>
-                    Then to see them roll. I  ate the loaf<br>
-                    Watch,  fucking train<br>
-                </p>
-                <p>
-                    just wish Ali, We’re to make this air sad <br>
-                    so sucking, so coughing, I lead the  thorny, sore,<br>
-                    All is a tool, any, and I want to meet her<br>
-                </p>
-                <p>
-                    just so much and all this out  <br>
-                    I was a leak, and the  forest <br>
-                    I was     dulcet<br>
-                </p>
-                <p>
-                    I want to be  and to go<br>
-                    I want to  be good things<br>
-                    and to be back<br>
-                    I   want to be a trouble,<br>
-                    and the times. I was the last rhyme <br>
-                    he isn’t. Go to throne  erasing I do it I miss again<br>
-                </p>
-                <p>
-                    know tall tales to erase,<br>
-                    I want light in   sleep instead<br>
-                    renewed lasts, Sincerely,<br>
-                        Adrianna Crowell<br>
-                    2//2221213 2 years <br>             
-                </p>
-                <p>
-                    know “on smiling, he wore”<br>
-                        “friends-” <br>
-                    I am a saint, so the dry emulation has food, couse.<br>
-                    She has poetry printing machines<br>
-                    echo ceiling, I heard it, I assume. <br>              
-                </p>
-                <p>
-                    people and poets too feel<br>
-                    I’m acres to felt, to the sea, so  <br>
-                    you take the room you need  <br>
-                    I’m reeling. I ink lemmas here on me <br>                 
-                </p>
-                <p>
-                    people  ask but. I lie  <br>
-                    like tomorrow, too boring, seeming out<br>
-                    remains a bit,<br>
-                    hazelnut bark shivering, bring to math.<br>
-                </p>
-                <p>
-                    people ask, but at death go <br>
-                    I was then an  era, the best red there over  <br>                  
-                </p>
-                <p>
-                    13 year old thinks<br>
-                    I  ain’t it, <br>
-                    came to me, and without Erlenmeyer<br>
-                    out the butch  I was another    <br>                
-                </p>
-                <p>
-                    Adrianna Crowell, things  that I want to be<br>
-                </p>
-                <p>
-                    how much ruse I have,<br>
-                    calcite rose. The snow   fell, and what would be dried, <br>
-                    wolflike war. Tomorrow’s lying, Eliza  <br>             
-                </p>
-                <p>
-                    still feel like tonight<br>
-                    I really wasn’t myself and what even does it mean,<br>
-                    I was enough I was the pedant  <br>
-                    so   late I don’t. I don’t know what love<br>
-                </p>
-                <p>
-                    still feel like for myself fatality was love,<br>
-                    or to be sorry, lie in writing <br>
-                    it was me that won<br>
-                    my fate to be love, to be air<br>
-                    on the bottle, Sincerely     <br>               
-                </p>
-                <p>
-                    thinking about  you and the rug . It really was ugly <br>
-                    in the living room, lying after a<br>
-                    lonely tug tug of war . <br>
-                    The  old lying on your floor darling <br>               
-                </p>
-                <p>
-                    thinking about the road to  fir <br>
-                    awake  oil with Aunty and Erin . <br>
-                    It’s best to be young, king without anything missing <br>                   
-                </p>
-                <p>
-                    thinking about the room<br>
-                    the song the  bottom the mystery<br>
-                    be wary. I was too b roken  to soar<br>
-                    to fall or flying . I was at least<br>
-                </p>
-                <p>
-                    Ali how early,  allow this word<br>
-                    was to see day star. I  don’t know what  type of person<br>
-                    It’s looking to me, and was feeling <br>
-                    to the trial, I’m seeing the air<br>
-                </p>
+                <p><pre>
+Dear Diary,
+I’m meant to be and to go
+on the out, the some here and to
+
+feel like to eat and to eat and to go
+
+Dear Diary,
+Everything is mis sing here like it was because, 
+I wave to bat and you hold  
+but sorry this is so me. I meant to swing 
+not leave 
+
+I feel like a donkey and tall,
+so make me thorny. I’m so nice, LA to air today,
+I’m going to sit
+
+how much ale sat. I was hyperventilating in my essay
+Then to see them roll. I  ate the loaf
+Watch,  fucking train
+
+just wish Ali, We’re to make this air sad 
+so sucking, so coughing, I lead the  thorny, sore,
+All is a tool, any, and I want to meet her
+
+just so much and all this out  
+I was a leak, and the  forest 
+I was     dulcet
+
+I want to be  and to go
+I want to  be good things
+and to be back
+I   want to be a trouble,
+and the times. I was the last rhyme 
+he isn’t. Go to throne  erasing I do it I miss again
+
+know tall tales to erase,
+I want light in   sleep instead
+renewed lasts, Sincerely,
+    Adrianna Crowell
+2//2221213 2 years
+
+know “on smiling, he wore”
+    “friends-” 
+I am a saint, so the dry emulation has food, couse.
+She has poetry printing machines
+echo ceiling, I heard it, I assume.
+
+people and poets too feel
+I’m acres to felt, to the sea, so  
+you take the room you need  
+I’m reeling. I ink lemmas here on me
+
+people  ask but. I lie  
+like tomorrow, too boring, seeming out
+remains a bit,
+hazelnut bark shivering, bring to math.
+
+people ask, but at death go 
+I was then an  era, the best red there over
+
+13 year old thinks
+I  ain’t it, 
+came to me, and without Erlenmeyer
+out the butch  I was another
+
+Adrianna Crowell, things  that I want to be 
+
+how much ruse I have,
+calcite rose. The snow   fell, and what would be dried, 
+wolflike war. Tomorrow’s lying, Eliza
+
+still feel like tonight
+I really wasn’t myself and what even does it mean,
+I was enough I was the pedant  
+so   late I don’t. I don’t know what love
+
+still feel like for myself fatality was love,
+or to be sorry, lie in writing 
+it was me that won
+my fate to be love, to be air
+on the bottle, Sincerely
+
+thinking about  you and the rug . It really was ugly 
+in the living room, lying after a
+lonely tug tug of war . 
+The  old lying on your floor darling
+
+thinking about the road to  fir 
+awake  oil with Aunty and Erin . 
+It’s best to be young, king without anything missing
+
+thinking about the room
+the song the  bottom the mystery
+be wary. I was too b roken  to soar
+to fall or flying . I was at least
+
+Ali how early,  allow this word
+was to see day star. I  don’t know what  type of person
+It’s looking to me, and was feeling 
+to the trial, I’m seeing the air
+                </pre></p>
             </div>
         </div>
     </body>
