--- a/redcomp.html
+++ b/redcomp.html
@@ -14,260 +14,224 @@
             </div>
             <div class="poem">
                 <p class="title"><b>09/12/2005-09/09/2017</b></p>
-                <p>
-                    Today is Thersday, Junear, 2006. On Sunday, I went to my backyard<br>
-                    the yard the yard the arse the yard<br>
-                    then I went to Mum,<br>
-                    best day is Aurumday as the same then I want<br></p>
-                <p>
-                    Today is Monday, May 20, 2006. On Sunday, I went to my couse.<br> 
-                    They got the some the same the some to see<br>
-                    then.<br>
-                    We played <br>
-                    Was the other house, they were to see.<br>
-                </p>
-                <p>
-                    Today is Monday, I went to Ali’s house, the some to my soul. <br>
-                    I want the some the soul the some to my couse<br>
-                    you are the some, the art, and the same<br>
-                    and I want the same too <br>
-                </p>
-                <p>
-                    we hid things<br>
-                    I’m on my soul. <br>
-                    On Suturday, I pay the gods and <br>
-                </p>
-                <p>
-                    I went to leave it, maybe as it is. Some, and seeps, <br>
-                    you part me, <br>
-                    I’m hot. <br>
-                    Far, It is radiating through to my arteries<br>
-                    I’m that thing either way, so pray. <br>
-                    Everything is<br>
-                </p>
-                <p>
-                    Everything is some<br>
-                    the some the some, and my friend and I want to be books. <br>
-                    I was the same to my some <br>
-                    I was to beaks that soar as some<br>
-                </p>
-                <p>
-                    Everything is both<br>
-                    I went over the other future, ambering in, and I can’t take the shade<br>
-                    Today is Tousery, <br>
-                    it’s today, and I got you<br>
-                </p>
-                <p>
-                    Ali got the some<br>
-                    to play with, to seed the air <br>
-                    at worst, to the some the same, <br>
-                    to seed, I was sore <br>
-                    Summer, the way I was the air<br>
-                </p>
-                <p>
-                    cousin and the some the some the some <br>
-                    the last the mass, and I want gone <br>
-                    sad, I’m sad couse. <br>
-                    I want the mother, the some, the then,<br>
-                    and I was some way both<br>
-                </p>
-                <p>
-                    after Romulus, ole Holyoke lake,<br>
-                    On Saturday, I went to BJ’s for the some <br>
-                    We balance all. <br>
-                    On Saturday, I went to Monday, couse,<br>
-                    the past barren, I<br>
-                </p>
-                <p>
-                    I love. I tear. I would, but so early somnis.<br>
-                    Today is Tousdday, Jatu ray 2006. On Sanurday, I went to Manday, <br>
-                    I was betwixt, beneath, and the fare to Erin got behind<br>
-                </p>
-                <p>
-                    Then the maze, the lava to my couse <br>
-                    The as I see share that I want,<br>
-                    The lair, the parthenon and think I want the labyrinth<br>
-                    First they say some, now sure<br>
-                    then I went to dead yard someday, and I <br>
-                </p>
-                <p>
-                    I want and did that sentry that saw Anne Dorsey<br>
-                    there went wandering Christ.<br>
-                    Today is Friday, Jaye 11, 2005. <br>
-                    Mum and sister, I ally myself pristine.<br>
-                </p>
-                <p>
-                    Ali’s my house, but I need to have my own books. <br>
-                    I make it. We weed out some and Erin, past, echoes it <br>
-                    NyQuil owl, its fist, then that. The day held nary a variation,<br>
-                    have light<br>
-                </p>
-                <p>
-                    My hands are the some, the art <br>
-                    on the some, they are <br>
-                    the some the some the <br>
-                    lay the some, the art,<br>
-                    and the some to my soul is the same <br>
-                    to seed the air, at the same air<br>
-                </p>
-                <p>
-                    On S, Today I have to go,<br>
-                    are the same are the soul the some <br>
-                    Rome to my choir is some ray. <br>
-                    I was the same to my couse. I am the same, the air<br>
-                    O my friend, some the some the last the art the some <br>
-                </p>
-                <p>
-                    On 6#, <br>
-                    One way thing and I’m too far,<br>
-                    the mare and I’m the road, and you’re the sonorous May. I was too tall for this in the same way<br>
-                    sing that she come that summer, <br>
-                    that lay seed summer<br>
-                    the sea<br>
-                </p>
-                <p>
-                    on Fenday is Manday, I went on a boat,<br>
-                    here war is mad, and I wore the lanyard, then we <br>
-                    the too kind to try <br>
-                    some the some to soar and I want some<br>
-                    I made and I want to go on air. I dare to soar. <br>
-                    I don’t <br>
-                </p>
-                <p>
-                    just now, at Erin’s<br>
-                    its ending tome tiks,<br>
-                    soul is played then on the ding <br>
-                    O Christ, <a href="https://www.tiktok.com/@adri_may_not">tok</a>, at Shelburne Falls, tell all.<br>
-                    I hate me, play us holy. <br>
-                    I leave too, ending a selkie river bend<br>
-                </p>
-                <p>
-                    On Saturday, I went to Ali,<br>
-                    the same in the meadow, finish.<br>
-                    Today is Monday, Aurumday, I went to Monday and dent,<br>
-                    two are seen, reading, and Locke wrote to Erin freeing<br>
-                </p>
-                <p>
-                    Tomorrow, we told<br>
-                    I wish the house, the perfect, the tome <br>
-                    on Monday, Ontober is like the plié, the plane, so please, king,<br>
-                    I was the ion beneath<br>
-                    who got the forest<br>
-                </p>
-                <p>
-                    I think that’s how it looks,<br>
-                    wanking to you,<br>
-                    and begging and you leave to be the oldest<br> 
-                    of eating, of sixteen, leer for the going<br>
-                    to this. For the kind, the gates open, the loss we kindle for.<br>
-                </p>
-                <p>
-                    I feel late, west no apple, and landlocked,<br>
-                    old my sole, Bic lighter on ankle <br>
-                    “loose footing,”<br>
-                    get liked, want dandelion and deer and awe <br>
-                    firm, these are longer breaths. I go on not to keep,<br>
-                    but to wash off<br>
-                </p>
-                <p>
-                    Today is Monday, I went to there then the theater<br>
-                    the art, then in Sheday, I went to Ali.<br>
-                    Amo and love soon are in Sheday, and I want to be too<br>
-                    Mass and love soon are then in me<br>
-                </p>
-                <p>
-                    I went to Ali <br>
-                    Amo Ali Ali, the art, airing, and I want to love soon<br>
-                    Then in Sheday, and I went to Ali <br>
-                    Amo Ali, the art airing, and I want to be loved soon<br>
-                </p>
-                <p>
-                    dreamy bore,<br>
-                    Ale for books <br>
-                    I went to Saturday, I went to Suturday, I went to Mokeat, <br>
-                    between places, offered cuss<br>
-                    Today is Manday, Januar, 3, 2008. I go<br>
-                </p>
-                <p>
-                    I feel like a saint, and we were, and so here <br>
-                    the day waits for the soul to walk on the forest,<br>
-                    and she plays<br>
-                </p>
-                <p>
-                    I got well to go <br>
-                    O chorus, sing that I was done<br>
-                    O mother, you have my wail: never be that anxious<br>
-                    I went this Saturday, I went to Air<br>
-                    I want to go. I want to see<br>
-                </p>
-                <p>
-                    house in a wave for the helpless,<br>
-                    wet erase, but searing. <br>
-                    To sailing without a life boat, west to Erin as in the sister sadly <br>
-                    in Saturday, I am tired, I went to Air<br>
-                    change who feel, I am<br>
-                </p>
-                <p>
-                    house to live, I, when this is forgotten,<br>
-                    live in a state pine cemetery. <br>
-                    It has Phoebus but nothing real written on the fir. <br>
-                    <a href="https://www.umass.edu/english/sites/default/files/assets/english/jabberwocky_2022_june_8_final.pdf">Every written lie to death,</a><br>
-                    Today is Monday, Aurum<br>
-                </p>
-                <p>
-                    house in Sheday, I went to Saiurday,<br>
-                    I got the was and the fir<br>
-                    on the west, I was to you that day,<br>
-                    and we told, and the forest told<br>
-                </p>
-                <p>
-                    all gone, I am solely going to the same, and I am air. <br>
-                    I also, I went to the hour<br>
-                    all sheen, and there as I soar, She made it day<br>
-                    O, Sanuaday, see, look<br>
-                </p>
-                <p>
-                    all wet at the song,<br>
-                    the rap of the serene, the home is rain<br>
-                    and you are it<br>
-                    you say days, I am air with Erin, I know,<br>
-                    light reading to plateau.<br>
-                    I go home with tonight<br>
-                </p>
-                <p>
-                    school with my grease<br>
-                    I want to see, so we played <br>
-                    we slog out, wash<br>
-                    dip my toes enough the nights are cherry<br>
-                    I want the night and betwixt you, day, how new I feel<br>
-                </p>
-                <p>
-                    the artists for the hedonist then last, and I got a book,<br>
-                    and for that I’ve today had in soaring,<br>
-                    have the sand and here and then I<br>
-                </p>
-                <p>
-                    I went over Seaday, and I went to Sanurday, I went to the air<br>
-                    we have no good haste to send to you <br>
-                    where we know <br>
-                    for together and sane, and Air to Erin sent gold<br>
-                </p>
-                <p>
-                    Ali's house shiny and with you, the keys are<br>
-                    went to see like in the last, for me to hate and hover <br>
-                    sink to sea Ali, and I was sea foam<br>
-                    seashell cone. We fire then were fire<br>
-                    You pass after, <br>
-                    well leave it, <br>
-                    the sand blew school over<br>
-                    Ardently, pale this Sunday, I went to Air<br>
-                </p>
-                <p>
-                    Today is Monday, October 14, 2010. I can’t monetize<br>
-                    a being. I was reading shine or air, my Ali<br>
-                    was part of the sea, not LA, the part of me. <br>
-                    I’m home. It still fits.<br>
-                </p>
+                <p><pre>
+Today is Thersday, Junear, 2006. On Sunday, I went to my backyard
+the yard the yard the arse the yard
+then I went to Mum,
+best day is Aurumday as the same then I want
+
+Today is Monday, May 20, 2006. On Sunday, I went to my couse. 
+They got the some the same the some to see
+then.
+We played 
+Was the other house, they were to see.
+
+Today is Monday, I went to Ali’s house, the some to my soul. 
+I want the some the soul the some to my couse
+you are the some, the art, and the same
+and I want the same too 
+
+we hid things
+I’m on my soul. 
+On Suturday, I pay the gods and 
+
+I went to leave it, maybe as it is. Some, and seeps, 
+you part me, 
+I’m hot. 
+Far, It is radiating through to my arteries
+I’m that thing either way, so pray. 
+Everything is
+
+Everything is some
+the some the some, and my friend and I want to be books. 
+I was the same to my some 
+I was to beaks that soar as some
+
+Everything is both
+I went over the other future, ambering in, and I can’t take the shade
+Today is Tousery, 
+it’s today, and I got you
+
+Ali got the some
+to play with, to seed the air 
+at worst, to the some the same, 
+to seed, I was sore 
+Summer, the way I was the air
+
+cousin and the some the some the some 
+the last the mass, and I want gone 
+sad, I’m sad couse. 
+I want the mother, the some, the then,
+and I was some way both
+
+after Romulus, ole Holyoke lake,
+On Saturday, I went to BJ’s for the some 
+We balance all. 
+On Saturday, I went to Monday, couse,
+the past barren, I
+
+I love. I tear. I would, but so early somnis.
+Today is Tousdday, Jatu ray 2006. On Sanurday, I went to Manday, 
+I was betwixt, beneath, and the fare to Erin got behind
+
+Then the maze, the lava to my couse 
+The as I see share that I want,
+The lair, the parthenon and think I want the labyrinth
+First they say some, now sure
+then I went to dead yard someday, and I 
+
+I want and did that sentry that saw Anne Dorsey
+there went wandering Christ.
+Today is Friday, Jaye 11, 2005. 
+Mum and sister, I ally myself pristine.
+
+Ali’s my house, but I need to have my own books. 
+I make it. We weed out some and Erin, past, echoes it 
+NyQuil owl, its fist, then that. The day held nary a variation,
+have light
+
+My hands are the some, the art 
+on the some, they are 
+the some the some the 
+lay the some, the art,
+and the some to my soul is the same 
+to seed the air, at the same air
+
+On S, Today I have to go,
+are the same are the soul the some 
+Rome to my choir is some ray. 
+I was the same to my couse. I am the same, the air
+O my friend, some the some the last the art the some 
+
+On 6#, 
+One way thing and I’m too far,
+the mare and I’m the road, and you’re the sonorous May. I was too tall for this in the same way
+sing that she come that summer, 
+that lay seed summer
+the sea
+
+on Fenday is Manday, I went on a boat,
+here war is mad, and I wore the lanyard, then we 
+the too kind to try 
+some the some to soar and I want some
+I made and I want to go on air. I dare to soar. 
+I don’t 
+
+just now, at Erin’s
+its ending tome tiks,
+soul is played then on the ding 
+O Christ, tok, at Shelburne Falls, tell all.
+I hate me, play us holy. 
+I leave too, ending a selkie river bend
+
+On Saturday, I went to Ali,
+the same in the meadow, finish.
+Today is Monday, Aurumday, I went to Monday and dent,
+two are seen, reading, and Locke wrote to Erin freeing
+
+Tomorrow, we told
+I wish the house, the perfect, the tome 
+on Monday, Ontober is like the plié, the plane, so please, king,
+I was the ion beneath
+who got the forest
+
+I think that’s how it looks,
+wanking to you,
+and begging and you leave to be the oldest 
+of eating, of sixteen, leer for the going
+to this. For the kind, the gates open, the loss we kindle for.
+
+I feel late, west no apple, and landlocked,
+old my sole, Bic lighter on ankle 
+“loose footing,”
+get liked, want dandelion and deer and awe 
+firm, these are longer breaths. I go on not to keep,
+but to wash off
+
+Today is Monday, I went to there then the theater
+the art, then in Sheday, I went to Ali.
+Amo and love soon are in Sheday, and I want to be too
+Mass and love soon are then in me
+
+I went to Ali 
+Amo Ali Ali, the art, airing, and I want to love soon
+Then in Sheday, and I went to Ali 
+Amo Ali, the art airing, and I want to be loved soon
+
+dreamy bore,
+Ale for books 
+I went to Saturday, I went to Suturday, I went to Mokeat, 
+between places, offered cuss
+Today is Manday, Januar, 3, 2008. I go
+
+I feel like a saint, and we were, and so here 
+the day waits for the soul to walk on the forest,
+and she plays
+
+I got well to go 
+O chorus, sing that I was done
+O mother, you have my wail: never be that anxious
+I went this Saturday, I went to Air
+I want to go. I want to see
+
+house in a wave for the helpless,
+wet erase, but searing. 
+To sailing without a life boat, west to Erin as in the sister sadly 
+in Saturday, I am tired, I went to Air
+change who feel, I am
+
+house to live, I, when this is forgotten,
+live in a state pine cemetery. 
+It has Phoebus but nothing real written on the fir. 
+Every written lie to death,
+Today is Monday, Aurum
+
+house in Sheday, I went to Saiurday,
+I got the was and the fir
+on the west, I was to you that day,
+and we told, and the forest told
+
+all gone, I am solely going to the same, and I am air. 
+I also, I went to the hour
+all sheen, and there as I soar, She made it day
+O, Sanuaday, see, look
+
+all wet at the song,
+the rap of the serene, the home is rain
+and you are it
+you say days, I am air with Erin, I know,
+light reading to plateau.
+I go home with tonight
+
+school with my grease
+I want to see, so we played 
+we slog out, wash
+dip my toes enough the nights are cherry
+I want the night and betwixt you, day, how new I feel
+
+the artists for the hedonist then last, and I got a book,
+and for that I’ve today had in soaring,
+have the sand and here and then I
+
+I went over Seaday, and I went to Sanurday, I went to the air
+we have no good haste to send to you 
+where we know 
+for together and sane, and Air to Erin sent gold
+
+Ali's house shiny and with you, the keys are
+went to see like in the last, for me to hate and hover 
+sink to sea Ali, and I was sea foam
+seashell cone. We fire then were fire
+You pass after, 
+well leave it, 
+the sand blew school over
+Ardently, pale this Sunday, I went to Air
+
+Today is Monday, October 14, 2010. I can’t monetize
+a being. I was reading shine or air, my Ali
+was part of the sea, not LA, the part of me. 
+I’m home. It still fits.                
+                </pre></p>
             </div>
         </div>
     </body>
