Added Red Diary

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div></div>
                 <div class="diary-pic"><a href="redcomp.html"><img src="covers/RedComp.jpg" alt="Red composition book with scribbles"></a></div>
                 <div class="diary-pic"><a href="greenfuzz.html"><img src="covers/GreenFuzz.jpg" alt="Green fuzzy journal cover"></a></div>
-                <div class="diary-pic"><img src="unfinished/Red.png" alt="Red journal cover with black binding"></div>
+                <div class="diary-pic"><a href="red.html"><img src="covers/Red.jpg" alt="Red journal cover with black binding"></a></div>
                 <div class="diary-pic"><img src="unfinished/TealFloral.png" alt="Shiny teal journal cover with multicolor flowers"></div>
                 <div class="diary-pic"><img src="unfinished/Grey.png" alt="Grey journal cover"></div>
                 <div class="diary-pic"><img src="unfinished/PinkFloral.png" alt="White journal cover with pink and purple flowers"></div>
