--- a/greenfuzz.html
+++ b/greenfuzz.html
@@ -99,7 +99,7 @@ on the bottle, Sincerely
 
 thinking about  you and the rug . It really was ugly 
 in the living room, lying after a
-lonely tug tug of war . 
+lonely tug of war . 
 The  old lying on your floor darling
 
 thinking about the road to  fir 
