--- a/tealfloral.html
+++ b/tealfloral.html
@@ -26,7 +26,7 @@ null then tithing hope, hates touch  only
 old home we cling to,  and so needy  of
 
 I just want  be  known, to be    and to be love
- the Iycan’s moon digs gold, and the racing doe gave chase there  
+ the lycan’s moon digs gold, and the racing doe gave chase there  
 fuck it gets lonely,  this sin like  partial addend, Some
 
 I feel like asking Mike
