--- a/tealfloral.html
+++ b/tealfloral.html
@@ -36,7 +36,7 @@ I feel like asking Mike
  if with  her,  friends to  oceans,  or  a douchebag
 
 I feel like I’m only waiting,    held the  hand, own the love
-the  air  never ends, love, begin and Iower 
+the  air  never ends, love, begin and lower 
 fuck  the  light. I’ll  be  about again
 
 11th grade 16 years old
