added grey journal, added navigation between poems

--- a/greenfuzz.html
+++ b/greenfuzz.html
@@ -117,6 +117,9 @@ It’s looking to me, and was feeling
 to the trial, I’m seeing the air
                 </pre></p>
             </div>
+            <div class="next">
+                <p><a href="redcomp.html"><-</a><a href="red.html">-></a></p>
+            </div>
         </div>
     </body>
 </html>
