--- a/red.html
+++ b/red.html
@@ -139,6 +139,9 @@ a porch swing, tree, always two Ali,
 and then
                 </pre></p>
             </div>
+            <div class="next">
+                <p><a href="greenfuzz.html"><-</a><a href="tealfloral.html">-></a></p>
+            </div>
         </div>
     </body>
 </html>
