--- a/redcomp.html
+++ b/redcomp.html
@@ -230,8 +230,11 @@ Ardently, pale this Sunday, I went to Air
 Today is Monday, October 14, 2010. I can’t monetize
 a being. I was reading shine or air, my Ali
 was part of the sea, not LA, the part of me. 
-I’m home. It still fits.                
+I’m home. It still fits.
                 </pre></p>
+            </div>
+            <div class="next">
+                <p><a href="greenfuzz.html">-></a></p>
             </div>
         </div>
     </body>
