--- a/tealfloral.html
+++ b/tealfloral.html
@@ -115,6 +115,9 @@ Then we take  out death and ask the some the gone to dance
 first hunting, cede  air,  a death that  he  at most saw
                 </pre></p>
             </div>
+            <div class="next">
+              <p><a href="red.html"><-</a><a href="grey.html">-></a></p>
+          </div>
         </div>
     </body>
 </html>
