--- a/red.html
+++ b/red.html
@@ -45,7 +45,7 @@ all that other
 that I do the  other that I am 
 
 about that work, so see what It would be  if 
-l d rew stop . I’m wasted here. And would you never
+I d rew stop . I’m wasted here. And would you never
 ticket, send it from the roof to Erin
 
 about everywhere over thin Aristotle, 
