--- a/grey.html
+++ b/grey.html
@@ -110,7 +110,7 @@ and the fir, the some the sore on me, the some the soul,
 really go
 
 it feels like I’m nothing, the cans all lined,
- and Arun good  and tore the under lining, to meet now,
+ <a href="https://www.umass.edu/english/sites/default/files/assets/english/jabberwocky_2022_june_8_final.pdf#page=99">and Arun good  and tore the under lining</a>, to meet now,
 kiss sand  some sore on lips, some for tomorrow,
  Monday to eon,  rhyme the summer then 
 
