--- a/red.html
+++ b/red.html
@@ -72,7 +72,7 @@ I’m emerging. I visit oaths I just want.
 I make this hill beneath summer
 
 because I can be  the wind, on me the wind
-l  have some that I won’t make 
+I  have some that I won’t make 
 belt the  armed and the  dammed, and that some that I want 
 be held
 
