--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="diary-pic"><a href="red.html"><img src="covers/Red.jpg" alt="Red journal cover with black binding"></a></div>
                 <div class="diary-pic"><a href="tealfloral.html"><img src="covers/TealFloral.jpg" alt="Shiny teal journal cover with multicolor flowers"></a></div>
                 <div class="diary-pic"><a href="grey.html"><img src="covers/Grey.jpg" alt="Grey journal cover"></a></div>
-                <div class="diary-pic"><img src="unfinished/PinkFloral.png" alt="White journal cover with pink and purple flowers"></div>
+                <div class="diary-pic"><a href="all1.html"><img src="covers/PinkFloral.jpg" alt="White journal cover with pink and purple flowers"></a></div>
                 <div class="diary-pic"><img src="unfinished/Green.png" alt="Plain green journal"></div>
                 <div></div>
             </div>
