--- a/grey.html
+++ b/grey.html
@@ -148,7 +148,7 @@ Good
                 </pre></p>
             </div>
             <div class="next">
-                <p><a href="tealfloral.html"><-</a></p>
+                <p><a href="tealfloral.html"><-</a><a href="all1.html">-></a></p>
             </div>
         </div>
     </body>
