Added new secrets

--- a/greenfuzz.html
+++ b/greenfuzz.html
@@ -86,7 +86,7 @@ how much ruse I have,
 calcite rose. The snow   fell, and what would be dried, 
 wolflike war. Tomorrow’s lying, Eliza
 
-still feel like tonight
+<a href="https://www.shffls.com/shuffles/5250067476871432039">still feel like tonight</a>
 I really wasn’t myself and what even does it mean,
 I was enough I was the pedant  
 so   late I don’t. I don’t know what love
@@ -97,7 +97,7 @@ it was me that won
 my fate to be love, to be air
 on the bottle, Sincerely
 
-thinking about  you and the rug . It really was ugly 
+<a href="https://www.shffls.com/shuffles/5250227606850167088">thinking about  you and the rug . It really was ugly </a>
 in the living room, lying after a
 lonely tug of war . 
 The  old lying on your floor darling
