--- a/redcomp.html
+++ b/redcomp.html
@@ -196,7 +196,7 @@ I also, I went to the hour
 all sheen, and there as I soar, She made it day
 O, Sanuaday, see, look
 
-all wet at the song,
+<a href="https://www.shffls.com/shuffles/5250079313075681557">all wet at the song,</a>
 the rap of the serene, the home is rain
 and you are it
 you say days, I am air with Erin, I know,
